<resources>
    <string name="app_name">m9_quiz_localization</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Let\'s start the quiz</string>
    <string name="start">Start</string>
    <string name="questions">questions</string>
    <string name="_1">question 1</string>
    <string name="_2">question 2</string>
    <string name="_3">question 3</string>
    <string name="feedback_results">Quiz results</string>
    <string name="n_3">3</string>
    <string name="n_2">2</string>
    <string name="n_1">1</string>
    <string name="start_over">start again</string>
    <string name="enter_age">Enter age</string>
    <string name="back">back</string>
    <string name="result">result</string>
</resources>